Fix data table scrolling to have scrollbar inside the table.
Now data table module correctly scroll inside the table, leaving the table header and controls at the top of the module.

PiperOrigin-RevId: 365844982

--- a/lit_nlp/client/elements/table.css
+++ b/lit_nlp/client/elements/table.css
@@ -21,9 +21,14 @@
   height: 100%;
 }
 
-#table-container{
+.table-container {
   flex: 1;
   overflow: visible;
+  height: 100%
+}
+
+.toolbar + .table-container {
+  height: calc(100% - var(--toolbar-height));
 }
 
 #rows-container{
